data class Location(val line: Int, val col: Int)