data class Token(val type: TokenType, val lexeme: String, val location: Location)